--- a/src/app/index.html
+++ b/src/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Mithril Boilerplate</title>
+  <title>cosaMandinga</title>
   <!-- vendor.css --><!-- end -->
   <!-- app.css --><!-- end -->
   <!-- vendor.js --><!-- end -->
